--- a/oblig3_og_4/neural_networks/student_performance_neural.ipynb
+++ b/oblig3_og_4/neural_networks/student_performance_neural.ipynb
@@ -1850,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "502e64c7",
    "metadata": {},
    "outputs": [
@@ -1858,6 +1858,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "*\n",
+      "*\n",
       "*\n",
       "*\n",
       "*\n"
@@ -2108,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "7ff5ac58",
    "metadata": {},
    "outputs": [],
@@ -2538,7 +2540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "257b82be",
    "metadata": {},
    "outputs": [
@@ -2796,7 +2798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8134044b",
    "metadata": {},
    "outputs": [],
@@ -4483,7 +4485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "12519b68",
    "metadata": {},
    "outputs": [
@@ -4742,7 +4744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "79a86ef1",
    "metadata": {},
    "outputs": [],
@@ -5183,7 +5185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "272575a8",
    "metadata": {},
    "outputs": [
@@ -6783,7 +6785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "2b2074f9",
    "metadata": {},
    "outputs": [
@@ -6816,54 +6818,78 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.767232</td>\n",
-       "      <td>0.717134</td>\n",
-       "      <td>0.690443</td>\n",
-       "      <td>0.699906</td>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.764467</td>\n",
+       "      <td>0.708960</td>\n",
+       "      <td>0.689621</td>\n",
+       "      <td>0.696164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.009531</td>\n",
+       "      <td>0.013133</td>\n",
+       "      <td>0.005644</td>\n",
+       "      <td>0.006135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
        "      <td>0.751412</td>\n",
        "      <td>0.691461</td>\n",
        "      <td>0.683829</td>\n",
        "      <td>0.687161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>25%</th>\n",
        "      <td>0.760452</td>\n",
        "      <td>0.700607</td>\n",
-       "      <td>0.696490</td>\n",
+       "      <td>0.683969</td>\n",
+       "      <td>0.692889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.765837</td>\n",
+       "      <td>0.711063</td>\n",
+       "      <td>0.690443</td>\n",
        "      <td>0.698391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.777401</td>\n",
-       "      <td>0.724537</td>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.767232</td>\n",
+       "      <td>0.717134</td>\n",
        "      <td>0.693373</td>\n",
-       "      <td>0.702475</td>\n",
+       "      <td>0.699906</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.765837</td>\n",
-       "      <td>0.711063</td>\n",
-       "      <td>0.683969</td>\n",
-       "      <td>0.692889</td>\n",
+       "      <th>max</th>\n",
+       "      <td>0.777401</td>\n",
+       "      <td>0.724537</td>\n",
+       "      <td>0.696490</td>\n",
+       "      <td>0.702475</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   accuracy  precision    recall        f1\n",
-       "0  0.767232   0.717134  0.690443  0.699906\n",
-       "1  0.751412   0.691461  0.683829  0.687161\n",
-       "2  0.760452   0.700607  0.696490  0.698391\n",
-       "3  0.777401   0.724537  0.693373  0.702475\n",
-       "4  0.765837   0.711063  0.683969  0.692889"
+       "       accuracy  precision    recall        f1\n",
+       "count  5.000000   5.000000  5.000000  5.000000\n",
+       "mean   0.764467   0.708960  0.689621  0.696164\n",
+       "std    0.009531   0.013133  0.005644  0.006135\n",
+       "min    0.751412   0.691461  0.683829  0.687161\n",
+       "25%    0.760452   0.700607  0.683969  0.692889\n",
+       "50%    0.765837   0.711063  0.690443  0.698391\n",
+       "75%    0.767232   0.717134  0.693373  0.699906\n",
+       "max    0.777401   0.724537  0.696490  0.702475"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6874,7 +6900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "d08d9437",
    "metadata": {},
    "outputs": [
@@ -6907,54 +6933,78 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.805595</td>\n",
-       "      <td>0.769137</td>\n",
-       "      <td>0.738627</td>\n",
-       "      <td>0.750140</td>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.802769</td>\n",
-       "      <td>0.755982</td>\n",
-       "      <td>0.741222</td>\n",
-       "      <td>0.747408</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.801029</td>\n",
+       "      <td>0.757552</td>\n",
+       "      <td>0.734485</td>\n",
+       "      <td>0.742861</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.799096</td>\n",
-       "      <td>0.756160</td>\n",
-       "      <td>0.748367</td>\n",
-       "      <td>0.751491</td>\n",
+       "      <th>std</th>\n",
+       "      <td>0.004699</td>\n",
+       "      <td>0.008267</td>\n",
+       "      <td>0.011911</td>\n",
+       "      <td>0.009673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.803899</td>\n",
-       "      <td>0.760224</td>\n",
-       "      <td>0.723789</td>\n",
-       "      <td>0.735539</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>min</th>\n",
        "      <td>0.793785</td>\n",
        "      <td>0.746257</td>\n",
        "      <td>0.720418</td>\n",
        "      <td>0.729726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.799096</td>\n",
+       "      <td>0.755982</td>\n",
+       "      <td>0.723789</td>\n",
+       "      <td>0.735539</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.802769</td>\n",
+       "      <td>0.756160</td>\n",
+       "      <td>0.738627</td>\n",
+       "      <td>0.747408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.803899</td>\n",
+       "      <td>0.760224</td>\n",
+       "      <td>0.741222</td>\n",
+       "      <td>0.750140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.805595</td>\n",
+       "      <td>0.769137</td>\n",
+       "      <td>0.748367</td>\n",
+       "      <td>0.751491</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   accuracy  precision    recall        f1\n",
-       "0  0.805595   0.769137  0.738627  0.750140\n",
-       "1  0.802769   0.755982  0.741222  0.747408\n",
-       "2  0.799096   0.756160  0.748367  0.751491\n",
-       "3  0.803899   0.760224  0.723789  0.735539\n",
-       "4  0.793785   0.746257  0.720418  0.729726"
+       "       accuracy  precision    recall        f1\n",
+       "count  5.000000   5.000000  5.000000  5.000000\n",
+       "mean   0.801029   0.757552  0.734485  0.742861\n",
+       "std    0.004699   0.008267  0.011911  0.009673\n",
+       "min    0.793785   0.746257  0.720418  0.729726\n",
+       "25%    0.799096   0.755982  0.723789  0.735539\n",
+       "50%    0.802769   0.756160  0.738627  0.747408\n",
+       "75%    0.803899   0.760224  0.741222  0.750140\n",
+       "max    0.805595   0.769137  0.748367  0.751491"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6965,7 +7015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "f7e521cf",
    "metadata": {},
    "outputs": [
@@ -6998,9 +7048,13 @@
        "      <th>Keras Model Test</th>\n",
        "      <th>Keras Model Dropout Train</th>\n",
        "      <th>Keras Model Dropout Test</th>\n",
+       "      <th>Keras Sequential Multilayer Train</th>\n",
+       "      <th>Keras Sequential Multilayer Test</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Metric</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -7014,47 +7068,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Accuracy:</th>\n",
-       "      <td>0.823124</td>\n",
-       "      <td>0.760173</td>\n",
-       "      <td>0.798429</td>\n",
-       "      <td>0.764918</td>\n",
-       "      <td>0.824650</td>\n",
-       "      <td>0.761074</td>\n",
-       "      <td>0.810692</td>\n",
-       "      <td>0.773055</td>\n",
+       "      <td>0.822163</td>\n",
+       "      <td>0.759043</td>\n",
+       "      <td>0.801820</td>\n",
+       "      <td>0.766502</td>\n",
+       "      <td>0.816230</td>\n",
+       "      <td>0.762429</td>\n",
+       "      <td>0.809448</td>\n",
+       "      <td>0.766049</td>\n",
+       "      <td>0.801029</td>\n",
+       "      <td>0.764467</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Precision:</th>\n",
-       "      <td>0.791835</td>\n",
-       "      <td>0.703299</td>\n",
-       "      <td>0.758060</td>\n",
-       "      <td>0.710895</td>\n",
-       "      <td>0.794659</td>\n",
-       "      <td>0.705814</td>\n",
-       "      <td>0.777091</td>\n",
-       "      <td>0.712759</td>\n",
+       "      <td>0.790994</td>\n",
+       "      <td>0.702305</td>\n",
+       "      <td>0.761692</td>\n",
+       "      <td>0.709092</td>\n",
+       "      <td>0.778839</td>\n",
+       "      <td>0.705602</td>\n",
+       "      <td>0.773355</td>\n",
+       "      <td>0.709059</td>\n",
+       "      <td>0.757552</td>\n",
+       "      <td>0.708960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Recall:</th>\n",
-       "      <td>0.756385</td>\n",
-       "      <td>0.676889</td>\n",
-       "      <td>0.720278</td>\n",
-       "      <td>0.678064</td>\n",
-       "      <td>0.757847</td>\n",
-       "      <td>0.679544</td>\n",
-       "      <td>0.728372</td>\n",
-       "      <td>0.678749</td>\n",
+       "      <td>0.753137</td>\n",
+       "      <td>0.677198</td>\n",
+       "      <td>0.727530</td>\n",
+       "      <td>0.681635</td>\n",
+       "      <td>0.752991</td>\n",
+       "      <td>0.686812</td>\n",
+       "      <td>0.731057</td>\n",
+       "      <td>0.678670</td>\n",
+       "      <td>0.734485</td>\n",
+       "      <td>0.689621</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>F1:</th>\n",
-       "      <td>0.769426</td>\n",
-       "      <td>0.685242</td>\n",
-       "      <td>0.732692</td>\n",
-       "      <td>0.687232</td>\n",
-       "      <td>0.771387</td>\n",
-       "      <td>0.687989</td>\n",
-       "      <td>0.742273</td>\n",
-       "      <td>0.685750</td>\n",
+       "      <td>0.766523</td>\n",
+       "      <td>0.685386</td>\n",
+       "      <td>0.739470</td>\n",
+       "      <td>0.690175</td>\n",
+       "      <td>0.763191</td>\n",
+       "      <td>0.693611</td>\n",
+       "      <td>0.744249</td>\n",
+       "      <td>0.687019</td>\n",
+       "      <td>0.742861</td>\n",
+       "      <td>0.696164</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -7063,34 +7125,41 @@
       "text/plain": [
        "            Keras Sequential Train  Keras Sequential Test  \\\n",
        "Metric                                                      \n",
-       "Accuracy:                 0.823124               0.760173   \n",
-       "Precision:                0.791835               0.703299   \n",
-       "Recall:                   0.756385               0.676889   \n",
-       "F1:                       0.769426               0.685242   \n",
+       "Accuracy:                 0.822163               0.759043   \n",
+       "Precision:                0.790994               0.702305   \n",
+       "Recall:                   0.753137               0.677198   \n",
+       "F1:                       0.766523               0.685386   \n",
        "\n",
        "            Keras Sequential Dropout Train  Keras Sequential Dropout Test  \\\n",
        "Metric                                                                      \n",
-       "Accuracy:                         0.798429                       0.764918   \n",
-       "Precision:                        0.758060                       0.710895   \n",
-       "Recall:                           0.720278                       0.678064   \n",
-       "F1:                               0.732692                       0.687232   \n",
+       "Accuracy:                         0.801820                       0.766502   \n",
+       "Precision:                        0.761692                       0.709092   \n",
+       "Recall:                           0.727530                       0.681635   \n",
+       "F1:                               0.739470                       0.690175   \n",
        "\n",
        "            Keras Model Train  Keras Model Test  Keras Model Dropout Train  \\\n",
        "Metric                                                                       \n",
-       "Accuracy:            0.824650          0.761074                   0.810692   \n",
-       "Precision:           0.794659          0.705814                   0.777091   \n",
-       "Recall:              0.757847          0.679544                   0.728372   \n",
-       "F1:                  0.771387          0.687989                   0.742273   \n",
+       "Accuracy:            0.816230          0.762429                   0.809448   \n",
+       "Precision:           0.778839          0.705602                   0.773355   \n",
+       "Recall:              0.752991          0.686812                   0.731057   \n",
+       "F1:                  0.763191          0.693611                   0.744249   \n",
        "\n",
-       "            Keras Model Dropout Test  \n",
-       "Metric                                \n",
-       "Accuracy:                   0.773055  \n",
-       "Precision:                  0.712759  \n",
-       "Recall:                     0.678749  \n",
-       "F1:                         0.685750  "
+       "            Keras Model Dropout Test  Keras Sequential Multilayer Train  \\\n",
+       "Metric                                                                    \n",
+       "Accuracy:                   0.766049                           0.801029   \n",
+       "Precision:                  0.709059                           0.757552   \n",
+       "Recall:                     0.678670                           0.734485   \n",
+       "F1:                         0.687019                           0.742861   \n",
+       "\n",
+       "            Keras Sequential Multilayer Test  \n",
+       "Metric                                        \n",
+       "Accuracy:                           0.764467  \n",
+       "Precision:                          0.708960  \n",
+       "Recall:                             0.689621  \n",
+       "F1:                                 0.696164  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
