--- a/oblig3_og_4/supervised_learing/abalone_age.ipynb
+++ b/oblig3_og_4/supervised_learing/abalone_age.ipynb
@@ -142,17 +142,23 @@
     "#### Beskrivelser av metoder for trening, tuning og testing av datasettet\n",
     "- For å test og tune modellene har jeg laget en nested CV funksjon som bruker GridSearchCV som den indre loopen. Ut av denne funksjonen så får vi returnert den beste modellen for hver runde av den ytere loopen, de tilhørende scoring resultatene for både train og test oppsplittingen, og resultatene fra selve GridSearchCV modellen, som blant annet kan brukes til å visualisere parameter tuningen.\n",
     "\n",
-    "- Grunnen til at jeg har valgt å bruke et slik oppsett er at dette tillater meg å trene og tune modellene på hele datasettet uten at modellen overfiter til datasettet som en helhet. Dette gjør at resultatene du får ut fra denne typen validering i større grad vil ha god overførings verdi til hele datasettet for videre bruk.\n",
+    "- Grunnen til at jeg har valgt å bruke et slik oppsett er at dette tillater meg å trene og tune modellene på hele datasettet uten at modellen overfiter til datasettet som en helhet. Dette gjør at resultatene du får ut fra denne typen tuning i større grad vil ha god overførings verdi til nye data for videre bruk.\n",
     "\n",
     "- Måten dette oppnås på er at datasettet i yter loopen blir delt opp i for eks. 5 deler hvor du bruker 4 av disse dele til trening av modellene og den siste delen til testing. I den indre loopen splitter du igjen opp testdelen av data settet i for eks. 4 deler, hvor da 3 av disse brukes til trening av modellen og 1 del til testing/validering. På denne måte får du benyttet hele datasettet til trening og validering av modellene uten at den enkelte test delen av datasettet har blitt brukt til trening av modellen i forbindelse med sin vurdering av prestasjonen til modellen.\n",
     "\n",
-    "- Jeg har også lagt inn fuksjonalitet for å kunne endre antall spliter i ytter og inner loopene for treningen av modelene, noe som er kan være veldig nytt for å kunne redusere kjøretiden til fuksjonen ved utprøving av forskjellige tuning parameter.\n",
+    "- Jeg har også lagt inn fuksjonalitet for å kunne endre antall spliter i ytter og inner loopene for treningen av modelene, noe som er kan være veldig nyttig for å kunne redusere kjøretiden til fuksjonen ved utprøving av forskjellige tuning parameter, noe som jeg kommer til å benytte meg av pga. eldre hardware.\n",
     "\n",
-    "- For oppdelingen av datasettet har jeg bruk StratifiedKFold slik at det oppnå så lik som mulig fordeling av target klassene mellom de forskjellige oppsplittingene av datasettet. Det er imidlertid hvert å merke seg at det for flere av target klassene er veldig få verdier og at det derfor vil være umulig å oppnå en perfekt fordeling. Jeg har imidlertid ikke valgt å gjøre noen tiltak for prøve å balansere ut disse forskjellene i datasettet, da det ikke finnes nok verdier for disse uteligger klassene til å lage sytektisk data. Eller ved å eksskludere disse utligger klassene fra datasettetet vil vi mangle viktig punkter for modellene for å kunne ha god overførings verdi til nye data.   \n",
+    "- For oppdelingen av datasettet har jeg bruk StratifiedKFold slik at det oppnå så lik som mulig fordeling av target klassene mellom de forskjellige oppsplittingene av datasettet.  \n",
     "\n",
-    "- For å vurdere disse modellene har jeg valgt å bruke disse metricene \"mean absolutte error\", \"mean squared error\" og \"r2\". r2 er et mål på hvor sterk korrelasjonen mellom de predikerte feature verdieen og target verdiere er. Mean absolute error er et mål på den absolutte feil mengde for prediksjonen til modellene, og gir en indikasjon på hvor mye feil det er i prediksjonene. Mean squared error gir et bilde på hvor bra modellen håndere eventuelle uteligger, da feil verdier for disse blir forsterket gjennom kvadreringe i bergningen av feil margien.\n",
+    "- For å vurdere disse modellene har jeg valgt å bruke disse metricene \"mean absolutte error\", \"mean squared error\" og \"r2\". r2 er et mål på hvor mye av variasjonen i target verdiene som kan forklares av variasjonen i feature verdiene. Mean absolute error er et mål på den absolutte feil mengde for prediksjonen til modellene, og gir en indikasjon på hvor mye feil det er i prediksjonene. Mean squared error gir et bilde på hvor bra modellen håndtere eventuelle uteliggere, da feil verdier for disse blir forsterket gjennom kvadreringen i beregningen av feil marginen.\n",
     "\n",
-    "- For å unngå eksponentiell kjøretid ved tuningen av modellene kommer jeg til å dele opp tuningen i midre deler slik at kjøretiden blir lettere håndterbar. Utover dette kommer jeg til å gjennomføre noe videre tuning og testing av modellene som ikke vil være inkludert i de endelige fila av hensyn til å gjøre dokumentet mer oversiktig og lett forstålig, men jeg kommer til å dokumentere den helheltlige prossens slik at det mulig å se en rød tråd gjennom tuningen av modellene. "
+    "- For å unngå eksponentiell kjøretid ved tuningen av modellene kommer jeg til å dele opp tuningen i midre deler slik at kjøretiden blir lettere håndterbar. Utover dette kommer jeg til å gjennomføre noe videre tuning og testing av modellene som ikke vil være inkludert i de endelige fila av hensyn til å gjøre dokumentet mer oversiktig og lett forstålig, men jeg kommer til å dokumentere den helheltlige prossens slik at det mulig å se en rød tråd gjennom tuningen av modellene.\n",
+    "\n",
+    "-\tPga. elde hardware og problemer med lang kjøre tid på flere av modellene når disse tunes med nested cross validation vil jeg derfor hvor det er hensiktsmessig, dele opp tuning i flere deler for å unngå eksponentiell kjøre tid. Dette er selvfølgelig ikke gunstig, da det kan være mulige påvirkende faktorer mellom tuning parametere som du ikke observere når disse tunes sekvensielt, men det dessverre nødvendig for noen av modellene. Der hvor det er mulig vil jeg heller bruke et redusert antall splitter av datasettet i kryss valideringen for å redusere kjøre tiden.\n",
+    "\n",
+    "-\tEtter at jeg har gjennomført tuningen av modellene kommer jeg til å kjøre en endelig test av modellene med de parameter verdiene jeg har kommet fram til. Dette gjør jeg slik GridSearchCV ikke skal velge de parameter verdiene som passer best for deler av datasettet, slik at jeg får et testresultat for de endelige modellene som er representative for hele datasettet.\n",
+    "\n",
+    "-\tFor de avsluttende testene kommer jeg til å bruke en oppdeling av datasettet på 5 splitter for den ytre loopen og 4 for den indre. Dette gjøre at jeg vil få en god fordeling mellom training og test data og en typisk 80-20 splitt mellom traning og test i den ytre testing av datasettet.\n"
    ]
   },
   {
@@ -162,17 +168,17 @@
    "source": [
     "#### RandomForestRegressor\n",
     "\n",
-    "- For å tune modellene for denne algoritmen så valgte jeg å bruke disse parameterne, max_depth, min_samples_leaf, min_samples_split, crriterion og n_estimatiors. Jeg valge å brukes disse parameterene da jeg mener at disse er de mest relevate parameterene å bruke for denne typen modell, samt å hvis forståelse for hvordan dette påvirker prestasjonen til modellen uten at tuning og testing av modellen blir alt for tidkrevende.\n",
+    "- For å tune denne modellen så har jeg valgte å bruke disse parameterne, max_depth, min_samples_leaf, crriterion og n_estimatiors. Jeg valgte å brukes disse parameterne da jeg mener at disse er de mest relevante parameterne å bruke for denne typen modell, samt å hvis forståelse for hvordan dette påvirker prestasjonen til modellen uten at tuning og testing av modellen blir altfor tidkrevende.\n",
     "\n",
     "- Max_depth definere hvor dype de forskjellige trene i modellen kan være, generelt vil dette gjøre at jo dypere treet er jo bedre kan disse tilpasse seg datasettet, men dette øker også risikoen for overfiting da du ofte kan få treer som tilpasser seg edge caser hvis du ikke implementere andre parameter for å unngå dette [1].\n",
     "\n",
-    "- min_samples_leaf er en parameter som brukes for å redusere overfiting på de forskjellige trærne, ved å sette en begrensing på minimums verdien en enkelt node i treet må innehold. Dvs. desto mindre denne verdien er desto mer risiko for overfiting vil du få, samt at modellen lettere tilpasser seg edge caser. Du kan også velge å erstatte denne parameteren med min_samples_split, da disse ofte kan gi overlappende resultater. min_samples_split begrenser hvor mange verdier en node må ha for å kunne splittes opp i flere bladnoder. Hoved forskjellen mellom disse parameterne er at min_samples_split vil være mer begrensede i forhold til veldig små edge caser ved bruk av høyere verdier for denne parameteren [1].\n",
+    "- min_samples_leaf er en parameter som brukes for å redusere overfiting på de forskjellige trærne, ved å sette en minimums begrensning på antall verdier en enkelt node i treet må inneholde. Dvs. desto mindre denne verdien er desto mer risiko for overfiting vil du få, samt at modellen lettere tilpasser seg edge caser.\n",
     "\n",
-    "- n_estimator er en parameter som definere hvor mange individuelle treer modellen kan inneholde. Dvs. desto høyere denne verdien er jo bedre kan modellen tilpasse seg et datasett, men dette øker også risikoen for overfiting samt kjøretiden til modellen [1].\n",
+    "- n_estimator er en parameter som definere hvor mange individuelle treere modellen kan inneholde. Dvs. desto høyere denne verdien er jo bedre kan modellen i utgangspunktet tilpasse seg et datasett, men dette øker også risikoen for overfiting samt kjøretiden til modellen [1].\n",
     "\n",
-    "- criterion er en parameter som gir deg muligheten til å velge mellom forskjellige funksjoner for å vurdere kvaliteten til en node split i modellen. Disse fuksjonene har forskjllige styrker og svakheter som gjør at de vil være best tilpasset til forskjellige datasett [1].\n",
+    "- criterion er en parameter som gir deg muligheten til å velge mellom forskjellige funksjoner/algoritmer for å vurdere kvaliteten til en node split i modellen. Disse funksjonene har forskjellige styrker og svakheter som gjør at de kan være best tilpasset til forskjellige datasett [1].\n",
     "\n",
-    "- [1]: Scikit Learn. (u.å) RandomForestRegressor. Hentet 9. November 2025 fra https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html"
+    "- [1]: Scikit Learn. (u.å) RandomForestRegressor. Hentet 9. November 2025 fra https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html\n"
    ]
   },
   {
@@ -276,6 +282,12 @@
     "sb.boxplot(data=rf_cv_results, x='param_n_estimators', y='mean_test_r2', ax=ax[2])\n",
     "sb.boxplot(data=rf_cv_results, x='param_criterion', y='mean_test_r2', ax=ax[3])\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "506b12a0",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
