--- a/oblig3_og_4/supervised_learing/student_performance.ipynb
+++ b/oblig3_og_4/supervised_learing/student_performance.ipynb
@@ -182,12 +182,40 @@
     "\n",
     "- For å vurdere disse modellene har jeg valgt å bruke disse metricene Accuracy, Precision, Recall, F1-score og Roc_auc. Accuracy er et mål på hvor treffsikre prediksjonene er for hele datasettet. Precision er et mål på hvor godt modellen klarer å predikere positive representasjoner for den enkelte klassen målt opp mot det totale antallet positive prediksjoner. Recall er et mål på hvor godt modellen klarer å predikere positive repsentasjoner for den enkelte klassen målt opp mot det det faktiske antalle av positive representasjoner. F1-score er en samlet representasjon av precision og recall som balansere hverandre slik at du en god verdi på den enne av disse vil balanseres av den dårlig verdi på den andre. Roc_auc er et mål på arealet under en ROC curve som representere forholdet mellom ekte positive prediksjoner og falske positive prediksjoner.\n",
     "\n",
-    "- For precision, recall, f1 og roc_auc er det imidlertid hvert å merke seg at disse metricene i utgangspunktet er laget for å vurdere binære klassifikasjoner og at derfor må disse vurderes enkeltvis og så samles, jeg har valgt å bruke et uvektet macro gjennomsnitt for å oppnå dette."
+    "- For precision, recall, f1 og roc_auc er det imidlertid hvert å merke seg at disse metricene i utgangspunktet er laget for å vurdere binære klassifikasjoner og at derfor må disse vurderes enkeltvis og så samles, jeg har valgt å bruke et uvektet macro gjennomsnitt for å oppnå dette.\n",
+    "\n",
+    "- For å unngå eksponentiell kjøretid ved tuningen av modellene kommer jeg til å dele opp tuningen i midre deler slik at kjøretiden blir lettere håndterbar. Utover dette kommer jeg til å gjennomføre noe videre tuning og testing av modellene som ikke vil være inkludert i de endelige fila av hensyn til å gjøre dokumentet mer oversiktig og lett forstålig, men jeg kommer til å dokumentere den helheltlige prossens slik at det mulig å se en rød tråd gjennom tuningen av modellene.\n",
+    "\n",
+    "-\tPga. elde hardware og problemer med lang kjøre tid på flere av modellene når disse tunes med nested cross validation vil jeg derfor hvor det er hensiktsmessig, dele opp tuning i flere deler for å unngå eksponentiell kjøre tid. Dette er selvfølgelig ikke gunstig, da det kan være mulige påvirkende faktorer mellom tuning parametere som du ikke observere når disse tunes sekvensielt, men det dessverre nødvendig for noen av modellene. Der hvor det er mulig vil jeg heller bruke et redusert antall splitter av datasettet i kryss valideringen for å redusere kjøre tiden.\n",
+    "\n",
+    "-\tEtter at jeg har gjennomført tuningen av modellene kommer jeg til å kjøre en endelig test av modellene med de parameter verdiene jeg har kommet fram til. Dette gjør jeg slik GridSearchCV ikke skal velge de parameter verdiene som passer best for deler av datasettet, slik at jeg får et testresultat for de endelige modellene som er representative for hele datasettet.\n",
+    "\n",
+    "-\tFor de avsluttende testene kommer jeg til å bruke en oppdeling av datasettet på 5 splitter for den ytre loopen og 4 for den indre. Dette gjøre at jeg vil få en god fordeling mellom training og test data og en typisk 80-20 splitt mellom traning og test i den ytre testing av datasettet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14a13035",
+   "metadata": {},
+   "source": [
+    "#### RandomForestClassifier\n",
+    "\n",
+    "- For å tune denne modellen så har jeg valgte å bruke disse parameterne, max_depth, min_samples_leaf, crriterion og n_estimatiors. Jeg valgte å brukes disse parameterne da jeg mener at disse er de mest relevante parameterne å bruke for denne typen modell, samt å hvis forståelse for hvordan dette påvirker prestasjonen til modellen uten at tuning og testing av modellen blir altfor tidkrevende.\n",
+    "\n",
+    "- Max_depth definere hvor dype de forskjellige trene i modellen kan være, generelt vil dette gjøre at jo dypere treet er jo bedre kan disse tilpasse seg datasettet, men dette øker også risikoen for overfiting da du ofte kan få treer som tilpasser seg edge caser hvis du ikke implementere andre parameter for å unngå dette [1].\n",
+    "\n",
+    "- min_samples_leaf er en parameter som brukes for å redusere overfiting på de forskjellige trærne, ved å sette en minimums begrensning på antall verdier en enkelt node i treet må inneholde. Dvs. desto mindre denne verdien er desto mer risiko for overfiting vil du få, samt at modellen lettere tilpasser seg edge caser.\n",
+    "\n",
+    "- n_estimator er en parameter som definere hvor mange individuelle treere modellen kan inneholde. Dvs. desto høyere denne verdien er jo bedre kan modellen i utgangspunktet tilpasse seg et datasett, men dette øker også risikoen for overfiting samt kjøretiden til modellen [1].\n",
+    "\n",
+    "- criterion er en parameter som gir deg muligheten til å velge mellom forskjellige funksjoner/algoritmer for å vurdere kvaliteten til en node split i modellen. Disse funksjonene har forskjellige styrker og svakheter som gjør at de kan være best tilpasset til forskjellige datasett [1].\n",
+    "\n",
+    "- [1]: Scikit Learn. (u.å) RandomForestRegressor. Hentet 9. November 2025 fra https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "9fcfa3bc",
    "metadata": {},
    "outputs": [
@@ -205,7 +233,7 @@
     "rf_params = {\n",
     "    'max_depth': [5, 10, 20, 35],\n",
     "    'min_samples_leaf': [2, 4, 8],\n",
-    "    'criterion': ['gini', 'entropy', 'log_loss'],\n",
+    "    'criterion': ['gini','entropy', 'log_loss'],\n",
     "    'n_estimators': [50, 150, 500, 1000],\n",
     "}\n",
     "rf_estimators, rf_scores_train, rf_scores_test, rf_cv_results = train(df_features, df_targets,\n",
